Update tag manager

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
               new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
             j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-PQFQLX4');</script>
+    })(window,document,'script','dataLayer','%REACT_APP_GOOGLE_TAG_MANAGER_ID%');</script>
     <!-- End Google Tag Manager -->
 
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -46,7 +46,7 @@
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PQFQLX4"
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-%REACT_APP_GOOGLE_TAG_MANAGER_ID%"
                       height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
